--- a/templates/customer/favourites.html
+++ b/templates/customer/favourites.html
@@ -19,6 +19,9 @@
             <div class="columns is-multiline" id='displayListings'>
                 {% include 'components/listing-card.html' %}
             </div>
+            <a href="/discover"><p class='subtitle has-text-centered has-text-link'>
+                Find more tours to love.
+            </p></a>
         </div>
     </section>
 {% endblock %}
