--- a/templates/components/listing-card.html
+++ b/templates/components/listing-card.html
@@ -29,7 +29,7 @@
 {% else %}
     <div class='section'>
         <p class='subtitle has-text-centered'>
-            We are unable to find such a tour 
+            Nothing to display here. 
         </p>
     </div>
 
