--- a/templates/customer/allBookings.html
+++ b/templates/customer/allBookings.html
@@ -26,29 +26,31 @@
                 <div class="column">
                     <p class="subtitle">Upcoming Tours</p>
                     <table class='table is-striped is-fullwidth'>
-                        {% set content = 0 %}
+                        {% set content = [] %}
                         {% for item in booking_list %}
-                        {% if item.process_step == 6 %}
-                        {% set content = 1 %}
-                        <tr>
-                            <td>{{ item.book_date }}</td>
-                            <td>
-                                <a href="/bookings/{{ item['_id'] }}">{{ listings[loop.index0].tour_name }}</a>
-                            </td>
-                        </tr>
-                        {% endif %}
+                            {% if item.process_step == 6 %}
+                                {{ content.append(item) |default("", True) }}
+                                <tr>
+                                    <td>{{ item.book_date }}</td>
+                                    <td>
+                                        <a href="/bookings/{{ item['_id'] }}">{{ listings[loop.index0].tour_name }}</a>
+                                    </td>
+                                </tr>
+                            {% endif %}
                         {% endfor %}
-                        {% if content == 0%}
-                        <p>no upcomong tour lmao</p>
+                            </table>
+                        {% if content | length == 0 %}
+                            <p class="has-text-centered">You have no Upcoming tours.</p>
                         {% endif %}
-                    </table>
                 </div>
                 <div class="divider is-vertical is-right"></div>
                 <div class="column">
                     <p class="subtitle">Required Action</p>
                     <table class='table is-striped is-fullwidth'>
+                        {% set content = [] %}
                         {% for item in booking_list %}
                         {% if item.process_step in (1, 3, 5, 6, 7) %}
+                        {{ content.append(item) |default("", True) }}
                         <tr>
                             <td><b>{{ listings[loop.index0].tour_name }}</b></td>
                             {% if item.process_step == 1 %}
@@ -66,6 +68,9 @@
                         {% endif %}
                         {% endfor %}
                     </table>
+                        {% if content | length == 0 %}
+                            <p class="has-text-centered">All kept up to speed.</p>
+                        {% endif %}
                 </div>
             </div>
         </div>
@@ -97,7 +102,7 @@
         <section class="section">
             <div class="container">
                 {% if booking_list == [] %}
-                <div>Nothing to show here. Start your first tour with Tourisit today!</div>
+                <div class="has-text-centered">Nothing to display here. <a href="/discover">Start your first tour with Tourisit today.</a></div>
                 {% else %}
                 {% for item in booking_list %}
                 {% set list = listings[loop.index0] %}
