--- a/templates/tourGuides/allBusinesses.html
+++ b/templates/tourGuides/allBusinesses.html
@@ -22,11 +22,13 @@
     <div class="container">
         <div class="box">
             <div class="columns">
-                <div class="column is-half">
+                <div class="column">
                     <p class="subtitle">Upcoming Tours</p>
                     <table class='table is-striped is-fullwidth'>
+                        {% set content = [] %}
                         {% for item in booking_list %}
                             {% if item.process_step == 6 %}
+                            {{ content.append(item) |default("", True) }}
                                 <tr>
                                     <td>{{ item.book_date }}</td>
                                     <td><a href="">{{ listings[loop.index0].tour_name }}</a></td>
@@ -34,13 +36,18 @@
                             {% endif %}
                         {% endfor %}
                     </table>
+                    {% if content | length == 0 %}
+                            <p class="has-text-centered">You have no Upcoming tours.</p>
+                        {% endif %}
                 </div>
                 <div class="divider is-vertical is-right"></div>
-                <div class="column is-half">
+                <div class="column">
                     <p class="subtitle">Required Action</p>
                     <table class='table is-striped is-fullwidth'>
+                        {% set content = [] %}
                         {% for item in booking_list %}
                             {% if item.process_step in (2, 4, 7) %}
+                            {{ content.append(item) |default("", True) }}
                                 <tr>
                                     <td><b>{{ listings[loop.index0].tour_name }}</b></td>
                                     {% if item.process_step == 2 or item.process_step == 4 %}
@@ -52,6 +59,9 @@
                             {% endif %}
                         {% endfor %}
                     </table>
+                    {% if content | length == 0 %}
+                            <p class="has-text-centered">All kept up to speed.</p>
+                        {% endif %}
                 </div>
             </div>
         </div>
@@ -77,7 +87,7 @@
         <section class="section">
             <div class="container">
                 {% if booking_list == [] %}
-                <div>Nothing to show here. Start your first tour with Tourisit today!</div>
+                <div class="has-text-centered"> Nothing to display here. <a href="/listings">Set up your listings and kickstart your business today.</a></div>
                 {% else %}
                 {% for item in booking_list %}
                 {% set list = listings[loop.index0] %}
