--- a/templates/components/shards/msg.html
+++ b/templates/components/shards/msg.html
@@ -15,7 +15,8 @@
                 <span class="has-text-grey">
             {% if i["self"] %}
                 — Me
-            {% endif %}
+            {% endif %}&nbsp; ({{ i['timestamp']|timestamp_iso }})
+
         </span>
             </small>
             <p>{{ i["msg_content"] }}</p>
