--- a/templates/customer/booking.html
+++ b/templates/customer/booking.html
@@ -446,7 +446,7 @@
                                                     <span class="has-text-grey">
                                                         {% if i["self"] %}
                                                             — Me
-                                                        {% endif %}
+                                                        {% endif %}&nbsp; at {{ i['timestamp']|timestamp_iso }}
                                                     </span>
                                                 </small>
                                                 <p>{{ i["msg_content"] }}</p>
