Please refer to 6ccfca2

--- a/templates/auth/reset_password.html
+++ b/templates/auth/reset_password.html
@@ -22,7 +22,7 @@
         <div class="container" id="main">
             <div id="login">
                 <h1 class="title">Set a new password</h1>
-                <form method="POST" action="{{ url_for('forgot_password') }}">
+                <form method="POST">
                     {{ form.csrf_token }}
                     <div class="field">
                         <div class="control has-icons-left has-icons-right">
@@ -42,14 +42,28 @@
     </section>
 
     {% if accepted==True %}
-        <div id="emailAcceptedModal" class="modal is-active">
+        <div id="passwordChanged" class="modal is-active">
             <div class="modal-background"></div>
             <div class="modal-card box" style="padding: 3em;">
-                <p class="title is-3 has-text-weight-bold has-text-centered">Check your email.</p>
-                <p class="has-text-centered">If your email matches our records, an email with a recovery link to reset your password will be sent.</p>
+                <p class="title is-3 has-text-weight-bold has-text-centered">Password successfully changed.</p>
+                <p class="has-text-centered">You will be redirected to the login page shortly.</p>
+            </div>
+        </div>
+        <script>
+            setTimeout(function () {
+                window.location.replace("{{ url_for('login') }}")
+            }, 5000)
+        </script>
+    {% endif %}
+
+    {% if accepted==False %}
+        <div id="invalidToken" class="modal is-active">
+            <div class="modal-background"></div>
+            <div class="modal-card box" style="padding: 3em;">
+                <p class="title is-3 has-text-weight-bold has-text-centered">Oh no! Something broke.</p>
+                <p class="has-text-centered">Password change cannot be perfomed as <b>email link used is invalid or has expired</b>.</p>
                 <br>
-                <a onclick="$('#emailAcceptedModal').fadeOut('fast');" class="button is-light is-fullwidth"><i
-                                        class="fas fa-times"></i>&ensp;Close</a>
+                <a class="button is-light" href="{{ url_for('forgot_password') }}"><i class="fas fa-arrow-right"></i>&ensp;Request new email link</a>
             </div>
         </div>
     {% endif %}
