--- a/templates/setting.html
+++ b/templates/setting.html
@@ -109,9 +109,9 @@
                                     </ul>
                                 </div>
                             </div>
-                            <h1 class="is-size-4 has-text-left has-text-weight-bold pt-6 pb-4">Social Networks</h1>
+                            <h1 class="is-size-4 has-text-left has-text-weight-bold pt-6 pb-4">Social Networks<label class="is-size-6 has-text-danger has-text-weight-normal"> (Optional)</label></h1>
                             <div class="field">
-                                <label class="label has-text-weight-medium has-text-grey-dark" for="name">Facebook (Optional)</label>
+                                <label class="label has-text-weight-medium has-text-grey-dark" for="name">Facebook</label>
                                 <div class="control">
                                     {{ form.fb(id="fb", type="text", class="formfield input", placeholder="e.g. www.facebook.com/Tourisit", value=user.socialmedia["fb"]) }}
                                     <ul>
@@ -122,7 +122,7 @@
                                 </div>
                             </div>
                             <div class="field">
-                                <label class="label has-text-weight-medium has-text-grey-dark" for="insta">Instagram (Optional)</label>
+                                <label class="label has-text-weight-medium has-text-grey-dark" for="insta">Instagram</label>
                                 <div class="control">
                                     {{ form.insta(id="insta", type="text", class="formfield input", placeholder="e.g. www.instagram.com/Tourisit", value=user.socialmedia["insta"]) }}
                                     <ul>
@@ -133,7 +133,7 @@
                                 </div>
                             </div>
                             <div class="field">
-                                <label class="label has-text-weight-medium has-text-grey-dark" for="linkedin">LinkedIn (Optional)</label>
+                                <label class="label has-text-weight-medium has-text-grey-dark" for="linkedin">LinkedIn</label>
                                 <div class="control">
                                     {{ form.linkedin(id="linkedin", type="text", class="formfield input", placeholder="e.g. www.linkedin.com/in/Tourisit", value=user.socialmedia["linkedin"]) }}
                                     <ul>
