--- a/templates/tourGuides/business.html
+++ b/templates/tourGuides/business.html
@@ -717,7 +717,7 @@
                     <!--START: Display proposed cost-->
                     <div class="container box">
                         <div class="heading">Tour Price</div>
-                        <div class="title">{{ booking.book_charges['baseprice'] }}</div>
+                        <div class="title">${{ booking.book_charges['baseprice'] }}</div>
                     </div>
                 {% endif %}
                 <div class="columns">
