--- a/templates/success-support.html
+++ b/templates/success-support.html
@@ -12,7 +12,7 @@
                 <i class="far fa-check-circle fa-6x mb-4" style="color: limegreen;"></i>
                 <p class="title is-3 has-text-weight-semibold has-text-centered">Successfully Submitted</p>
                 <p class="subtitle has-text-centered mb-6">We will get in touch with you soon</p>
-                <a href="/me/settings" class="button is-success is-fullwidth">
+                <a href="/" class="button is-success is-fullwidth">
                     <i class="fas fa-home"></i>&ensp;Return to Home</a>
             </div>
         </div>
