--- a/templates/customer/booking.html
+++ b/templates/customer/booking.html
@@ -450,7 +450,7 @@
                                                     <span class="has-text-grey">
                                                         {% if i["self"] %}
                                                             — Me
-                                                        {% endif %}&nbsp; at {{ i['timestamp']|timestamp_iso }}
+                                                        {% endif %}&nbsp;({{ i['timestamp']|timestamp_iso }})
                                                     </span>
                                                 </small>
                                                 <p>{{ i["msg_content"] }}</p>
