(Reduction of Scope) Remove actions

--- a/templates/internal/users.html
+++ b/templates/internal/users.html
@@ -31,7 +31,7 @@
                     <th>Registration date</th>
                     <th>Last login</th>
                     <th>Account Type</th>
-                    <th>Actions</th>
+{#                    <th>Actions</th>#}
                 </tr>
                 {% for person in user_list %}
                     <tr>
@@ -49,7 +49,7 @@
                         {% else %}
                             <td>Member</td>
                         {% endif %}
-                        <td><a class="has-text-danger"><i class="fas fa-times"></i></a></td>
+{#                        <td><a class="has-text-danger"><i class="fas fa-times"></i></a></td>#}
                     </tr>
                 {% endfor %}
             </table>
