Fix tourisit admin badge

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -32,7 +32,7 @@
                         <i class="fas fa-check"></i>&ensp;Verified Guide
                     </span>
                         {% endif %}
-                        {% if person.verified == 1 %}
+                        {% if person.account_type == 1 %}
                             <span class="tag is-danger is-dark">
                                 <i class="fas fa-id-badge"></i>&ensp;Tourisit Admin
                     </span>
